Agregado fondos de card, footer y estilos

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <h1 class="nombre-pagina">Cards</h1>
           </a>
         </div>
-    </header>
-    
+    </header>   
     <main>
         <section class="barra-lateral-izquierda">
             <a class="titulos-busqueda" href="#card-accion">
@@ -47,60 +46,68 @@
         <div class="card-container">
             <div id="card-accion">
                 <div class="card">
-                    <img src="./img/re2.jpg" alt="Anime Thumbnail">
-                    <h2>Anime Title</h2>
-                    <p>Description of the anime</p>
+                    <img src="./img/re2.jpg" alt="Videogame title">
+                    <h2>Videogame Title</h2>
+                    <p>Description of the Videogame</p>
                   </div>
                   <div class="card">
-                      <img src="./img/re4.jpg" alt="Anime Thumbnail">
-                      <h2>Anime Title</h2>
-                      <p>Description of the anime</p>
+                      <img src="./img/re4.jpg" alt="Videogame title">
+                      <h2>Videogame Title</h2>
+                      <p>Description of the Videogame</p>
                   </div>
                   <div class="card">
-                      <img src="./img/re7.jpg" alt="Anime Thumbnail">
-                      <h2>Anime Title</h2>
-                      <p>Description of the anime</p>
+                      <img src="./img/re7.jpg" alt="Videogame title">
+                      <h2>Videogame Title</h2>
+                      <p>Description of the Videogame</p>
                   </div>
             </div>
             <div id="card-aventura">
                 <div class="card">
-                    <img src="./img/assasins creed syndicate.jpg" alt="Anime Thumbnail">
-                    <h2>Anime Title</h2>
-                    <p>Description of the anime</p>
+                    <img src="./img/assasins creed syndicate.jpg" alt="Videogame title">
+                    <h2>Videogame Title</h2>
+                    <p>Description of the Videogame</p>
                   </div>
                   <div class="card">
-                      <img src="./img/assasins creed valhalla.png" alt="Anime Thumbnail">
-                      <h2>Anime Title</h2>
-                      <p>Description of the anime</p>
+                      <img src="./img/assasins creed valhalla.png" alt="Videogame title">
+                      <h2>Videogame Title</h2>
+                      <p>Description of the Videogame</p>
                   </div>
                   <div class="card">
-                      <img src="./img/assassins-creed-codename-red.jpg" alt="Anime Thumbnail">
-                      <h2>Anime Title</h2>
-                      <p>Description of the anime</p>
+                      <img src="./img/assassins-creed-codename-red.jpg" alt="Videogame title">
+                      <h2>Videogame Title</h2>
+                      <p>Description of the Videogame</p>
                   </div>
             </div> 
             <div id="card-arcade">
                 <div class="card">
-                    <img src="./img/pac-man.jpg" alt="Anime Thumbnail">
-                    <h2>Anime Title</h2>
-                    <p>Description of the anime</p>
+                    <img src="./img/pac-man.jpg" alt="Videogame title">
+                    <h2>Videogame Title</h2>
+                    <p>Description of the Videogame</p>
                   </div>
                   <div class="card">
-                      <img src="./img/tekken7-arcade.jpg" alt="Anime Thumbnail">
-                      <h2>Anime Title</h2>
-                      <p>Description of the anime</p>
+                      <img src="./img/tekken7-arcade.jpg" alt="Videogame title">
+                      <h2>Videogame Title</h2>
+                      <p>Description of the Videogame</p>
                   </div>
                   <div class="card">
-                      <img src="./img/street-fighter-v-arcade-edition.jpg" alt="Anime Thumbnail">
-                      <h2>Anime Title</h2>
-                      <p>Description of the anime</p>
+                      <img src="./img/street-fighter-v-arcade-edition.jpg" alt="Videogame title">
+                      <h2>Videogame Title</h2>
+                      <p>Description of the Videogame</p>
                   </div>
-            </div>
-                   
+            </div>                  
         </div>
     </main>
     <footer>
-
+        <div class="menu-footer">
+            <nav class="nav-footer">
+                <ul>
+                    <li class="item"><a href="#">Nosotros</a></li>
+                    <li class="item"><a href="#">Contacto</a></li>
+                    <li class="item"><a href="#">Ayuda</a></li>
+                    <li class="item"><a href="#">Enviar comentarios</a></li>
+                </ul>
+            </nav>       
+        </div>
     </footer>
 </body>
 </html>
